# calcium-roi-analysis

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md  pyproject.toml
calcium_roi_analysis/: io.py  params.py
julia_src/: mask.jl  utils.jl
markdown/: find_roi.md
notebooks/: find_roi.ipynb  julia-microglia.ipynb  julia-playground.ipynb  julia_generate_masks.ipynb  napari_roi_blob_viz_and_label.ipynb  python-playground.ipynb
parameters/: example-microglia.yaml  example.yaml
scripts/: find_roi.py
tests/: test_calcium_roi_analysis.py
